
2017-10-18  Ron Norman <rjn@inglenet.com>

	* codegen.c: Fixed problem with braces in variable dump code

2017-10-17  Ron Norman <rjn@inglenet.com>

	* cobc.c: Change so -debug does NOT set -ftrace
	* codegen.c: Set module flags on entry to indicate if module
	  was compiled with -debug or -ftrace[all] so that the module
	  is not traced at runtime unless it had been compiled with that 
	  option

2017-10-07  Ron Norman <rjn@inglenet.com>

	* codegen.c: correction for -fodoslide

2017-09-26  Ron Norman <rjn@inglenet.com>

	* Changes to catch Divide by Zero errors when on ON SIZE ERROR
	* parser.y: 
	  Indicate that there was no  [NOT] ON SIZE ERROR
	  by setting handler_id to -1
	* typeck.c: Ignore handler_id if -1
	* codegen.c: Ignore handler_id is -1 then emit code
	  to set cob_exception_code to -1 to indicate there
	  was no ON SIZE ERROR clause and handle an error
	  accordingly

2017-09-18  Ron Norman <rjn@inglenet.com>

	* codegen.c: 
	  Emit Decimal Constants for all module types

2017-09-18  Ron Norman <rjn@inglenet.com>

	* codegen.c: 
	  Clear cob_glob_ptr->cob_exception_code at start of CALL

2017-09-18  Ron Norman <rjn@inglenet.com>

	* config.def: 
	  Added select-working: yes/no
	  SELECT RELATIVE KEY and ASSIGN fields must be in WORKING-STORAGE
	* typeck.c: 
	  Report 'declared outside WORKING-STORAGE' if 'select-working: yes'
	  and SELECT RELATIVE KEY or ASSIGN field is not in WORKING-STORAGE
	* codegen.c: 
	  When SELECT RELATIVE KEY or ASSIGN field is not in WORKING-STORAGE
	  Then set current data address in each OPEN and for RELATIVE files 
	  on every I/O operation
	* tree.c: 
	  Fix compile time resolve of FUNCTION INTEGER with negative value

2017-09-15  Ron Norman <rjn@inglenet.com>

	* flag.def,tree.c: 
	  Added -finline-intrinsic, defaults to ON
	  In tree.c . cb_build_intrinsic . if arguments as constants
	  then for some functions the value is computed at compile
	  time. Some functions are not done due to difference in