@@ -7005,6 +7005,8 @@ validate_move (cb_tree src, cb_tree dst, const unsigned int is_value)
 invalid:
 	if (is_value) {
 		cb_error_x (loc, _("Invalid VALUE clause"));
+	} else if (cobc_cs_check == CB_CS_SET) {
+		cb_error_x (loc, _("Invalid SET statement"));
 	} else {
 		cb_error_x (loc, _("Invalid MOVE statement"));
 	}
