@@ -1,4 +1,8 @@
 
+2017-10-25  Ron Norman <rjn@inglenet.com>
+
+	* typeck.c: Report 'Invalid SET statement' when appropriate
+
 2017-10-18  Ron Norman <rjn@inglenet.com>
 
 	* codegen.c: Fixed problem with braces in variable dump code
